--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#885BD6</color>
-    <color name="powersBar">#11CCA7</color>
+    <color name="powersBar">#FAC1BDC5</color>
 </resources>
