working on Project.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#885BD6</color>
     <color name="powersBar">#FAC1BDC5</color>
+    <color name="hila">#F8EC82</color>
+
 </resources>
