--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="purple">#885BD6</color>
     <color name="powersBar">#FAC1BDC5</color>
     <color name="hila">#F8EC82</color>
+    <color name="radius">#FAEC82F8</color>
+
 
 </resources>
