you're on strike, continue working on the players part.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="powersBar">#FAC1BDC5</color>
     <color name="hila">#F8EC82</color>
     <color name="radius">#FAEC82F8</color>
-
+    <color name="lavender">#8692f9</color>
 
 </resources>
