you're on strike, continue working on the players part.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
     android:background="@drawable/main"
     tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="380dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="20dp"
-        android:layout_constrai
+    //androidx.constraintlayout.widget.ConstraintLayout
+      // android:layout_width="380dp"
+        //android:layout_height="0dp"
+       // android:layout_marginBottom="20dp"
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
