--- a/app/src/main/res/layout/fragment_login_tab.xml
+++ b/app/src/main/res/layout/fragment_login_tab.xml
@@ -10,19 +10,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="warp_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="warp_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="20dp"
             android:padding="20dp">
 
 
             <ImageView
-                android:layout_width="warp_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="200dp"
                 android:src="@drawable/login"/>
 
@@ -71,7 +71,7 @@
                 android:layout_gravity="center"
                 android:id="@+id/login_buttom"
                 android:layout_marginTop="30dp"
-                android:textsize="18sp"
+                android:textSize="18sp"
                 android:text="Log In"
                 app:cornerRadius="30dp"/>
 
