--- a/app/src/main/res/layout/fragment_signup_tab.xml
+++ b/app/src/main/res/layout/fragment_signup_tab.xml
@@ -10,21 +10,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="warp_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="warp_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="20dp"
             android:padding="20dp">
 
 
             <ImageView
-                android:layout_width="warp_parent"
+                android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:src="@drawable/peopleForSignup"/>
+                android:src="@drawable/peopleforsignup"/>
 
             <EditText
                 android:layout_width="300dp"
@@ -71,7 +71,6 @@
                 android:layout_gravity="center"
                 android:id="@+id/signup_buttom"
                 android:layout_marginTop="30dp"
-                android:textsize="18sp"
                 android:text="Sign Up"
                 app:cornerRadius="30dp"/>
 
