--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,16 +9,17 @@
     tools:context=".MyProfileFragment">
 
     <LinearLayout
+        android:layout_marginTop="80dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="#FA4C4ECF">
+        android:layout_height="match_parent"
+        android:background="#3B698D"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginTop="30dp"
+            android:orientation="vertical"
             android:padding="60dp">
 
             <TextView
@@ -37,22 +38,22 @@
 
 
             <Button
+                android:id="@+id/game_button"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
-                android:id="@+id/game_buttom"
                 android:layout_marginTop="20dp"
-                android:textSize="18sp"
                 android:text="Let's play :)"
-                app:cornerRadius="30dp"/>
+                android:textSize="18sp"
+                app:cornerRadius="30dp" />
 
         </LinearLayout>
 
 
         // todo להוסיף את הדמות על המסך באמצע
 
-// todo להוסיף כוכבים ולבדוק אם אפשר למלא כל פעם כשהם חמישה או כל פעם להוסיף אחד ממולא
+        // todo להוסיף כוכבים ולבדוק אם אפשר למלא כל פעם כשהם חמישה או כל פעם להוסיף אחד ממולא
 
     </LinearLayout>
 
-</FrameLayout>
+<LinearLayout/>
