--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -1,59 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".MyProfileFragment">
 
     <LinearLayout
-        android:layout_marginTop="80dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#3B698D"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:orientation="vertical"
-            android:padding="60dp">
+            android:layout_marginTop="80dp"
+            android:padding="20dp">
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/figure1" />
+
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="my level-"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:id="@+id/myprofile_level"
+                android:layout_marginTop="30dp"
+                android:padding="8dp"
+                android:hint="level -"
                 android:textSize="30dp"
-                app:fontFamily="sans-serif-black" />
+                app:fontFamily="sans-serif-black"
+                android:drawablePadding="8dp"/>
+
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="coins-"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:id="@+id/myprofile_coins"
+                android:layout_marginTop="0dp"
+                android:padding="8dp"
+                android:hint="coins - "
                 android:textSize="30dp"
-                app:fontFamily="sans-serif-black" />
-
+                app:fontFamily="sans-serif-black"
+                android:drawablePadding="8dp" />
 
             <Button
-                android:id="@+id/game_button"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
+                android:id="@+id/myprofile_botton"
                 android:layout_marginTop="20dp"
-                android:text="Let's play :)"
                 android:textSize="18sp"
-                app:cornerRadius="30dp" />
+                android:text="Let's Play :)"
+                app:cornerRadius="30dp"/>
+
 
         </LinearLayout>
 
-
-        // todo להוסיף את הדמות על המסך באמצע
-
-        // todo להוסיף כוכבים ולבדוק אם אפשר למלא כל פעם כשהם חמישה או כל פעם להוסיף אחד ממולא
-
     </LinearLayout>
 
-<LinearLayout/>
+</LinearLayout>
