--- a/app/src/main/res/layout/fragment_financial_means.xml
+++ b/app/src/main/res/layout/fragment_financial_means.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,16 +8,12 @@
     android:orientation="vertical"
     tools:context=".FinancialMeansFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="10dp"
             android:padding="20dp">
 
             <TextView
@@ -46,176 +41,195 @@
                 app:fontFamily="sans-serif-black"
                 android:drawablePadding="8dp" />
 
-
-            <TableLayout
-                android:layout_marginTop="30dp"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:stretchColumns="0,1,2,3"
-                android:gravity="center" />
-
-            <TableRow
-                android:id="@+id/tableRow"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent">
-
-                <TextView
-                    android:text="1"
-                    android:layout_weight="1"
-                    android:background="#E91E63"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-                <TextView
-                    android:text="2"
-                    android:layout_weight="1"
-                    android:background="#E91E63"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-                <TextView
-                    android:text="3"
-                    android:layout_weight="1"
-                    android:background="#E91E63"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-                <TextView
-                    android:text="4"
-                    android:layout_weight="1"
-                    android:background="#E91E63"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-            </TableRow>
-
-
-            <TableLayout
-                android:layout_marginTop="60dp"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:stretchColumns="0,1,2,3,4"
-                android:gravity="center" />
-
-            <TableRow
-                android:id="@+id/tableRow2"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent">
-
-                <TextView
-                    android:text="1"
-                    android:layout_weight="1"
-                    android:background="#E91E63"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-                <TextView
-                    android:text="2"
-                    android:layout_weight="1"
-                    android:background="#E91E63"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-                <TextView
-                    android:text="3"
-                    android:layout_weight="1"
-                    android:background="#E91E63"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-            </TableRow>
-
-
-            <TableLayout
-                android:layout_marginTop="0dp"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:stretchColumns="0,1,2,3,4"
-                android:gravity="center" />
-
-            <TableRow
-                android:id="@+id/tableRow3"
-                android:layout_height="25"
-                android:layout_width="match_parent">
-
-                <TextView
-                    android:text="1000"
-                    android:textSize="dp"
-                    android:layout_weight="1"
-                    android:background="#CA3467"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-                <TextView
-                    android:text="2"
-                    android:layout_weight="1"
-                    android:background="#CA3467"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-                <TextView
-                    android:text="3"
-                    android:layout_weight="1"
-                    android:background="#CA3467"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-            </TableRow>
-
-
-            <TableLayout
-                android:layout_marginTop="30dp"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:stretchColumns="0,1,2,3,4"
-                android:gravity="center" />
-
-            <TableRow
-                android:id="@+id/tableRow4"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent">
-
-                <TextView
-                    android:text="1"
-                    android:layout_weight="1"
-                    android:background="#E91E63"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-                <TextView
-                    android:text="2"
-                    android:layout_weight="1"
-                    android:background="#E91E63"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow5"
-                android:layout_height="25"
-                android:layout_width="match_parent">
-
-                <TextView
-                    android:text="1000"
-                    android:textSize="dp"
-                    android:layout_weight="1"
-                    android:background="#CA3467"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-                <TextView
-                    android:text="2"
-                    android:layout_weight="1"
-                    android:background="#CA3467"
-                    android:textColor="#000000"
-                    android:padding="20dip" android:gravity="center"/>
-
-            </TableRow>
-
-
         </LinearLayout>
+
+
+
+            <LinearLayout
+                android:id="@+id/ll1"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:weightSum = "4"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="70dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:src="@drawable/rock" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="70dp"
+                    android:layout_weight="1"
+
+                    android:src="@drawable/rock"
+                    android:gravity="center"/>
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/rock"
+                    android:layout_weight="1"
+                    android:gravity="center"/>
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/rock"
+                    android:layout_weight="1"
+
+                    android:gravity="center"/>
+
+            </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/ll2"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:weightSum = "3"
+        android:orientation="horizontal"
+        android:layout_marginTop="40dp"
+        >
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="70dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/randanker"
+                    android:gravity="center"/>
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/snowball"
+                    android:layout_weight="1"
+
+                    android:gravity="center"/>
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/woodenlog"
+                    android:layout_weight="1"
+
+                    android:gravity="center"/>
+
+    </LinearLayout>
+
+
+
+
+    <LinearLayout
+        android:id="@+id/ll4"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:weightSum = "3"
+        android:orientation="horizontal">
+
+
+    <TextView
+                    android:drawableLeft="@drawable/ic_baseline_lock_24"
+                    android:text="1000"
+                    android:textSize="20dp"
+                    android:background="#425495"
+                    android:textColor="#000000"
+                    android:gravity="center"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+
+        android:layout_weight="1"
+        />
+
+                <TextView
+                    android:drawableLeft="@drawable/ic_baseline_lock_24"
+                    android:text="2"
+                    android:textSize="20dp"
+                    android:background="#425495"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:drawableLeft="@drawable/ic_baseline_lock_24"
+                    android:text="700"
+                    android:textSize="20dp"
+                    android:background="#425495"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+
+                    android:layout_weight="1"/>
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:id="@+id/ll3"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:weightSum = "3"
+        android:orientation="horizontal"
+        android:layout_marginTop="30dp"
+
+        >
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/boomerang"
+                    android:layout_weight="1"
+                    android:gravity="center"/>
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/rock"
+                    android:layout_weight="1"
+                    android:gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll5"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:weightSum = "3"
+        android:orientation="horizontal">
+                <TextView
+                    android:drawableLeft="@drawable/ic_baseline_lock_24"
+                    android:text="1000"
+                    android:textSize="20dp"
+                    android:background="#425495"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:drawableLeft="@drawable/ic_baseline_lock_24"
+                    android:text="2"
+                    android:textSize="20dp"
+                    android:background="#425495"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+
+                    android:layout_weight="1"/>
 
     </LinearLayout>
 
 </LinearLayout>
+
+
+
