--- a/app/src/main/res/layout/fragment_financial_means.xml
+++ b/app/src/main/res/layout/fragment_financial_means.xml
@@ -57,6 +57,7 @@
                     android:layout_height="70dp"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:id="@+id/ivPower0"
                     android:src="@drawable/arrows" />
 
                 <ImageView
@@ -64,6 +65,8 @@
                     android:layout_height="70dp"
                     android:layout_weight="1"
                     android:src="@drawable/boomb"
+                    android:id="@+id/ivPower1"
+
                     android:gravity="center"/>
 
                 <ImageView
@@ -71,6 +74,8 @@
                     android:layout_height="70dp"
                     android:src="@drawable/fireball"
                     android:layout_weight="1"
+                    android:id="@+id/ivPower2"
+
                     android:gravity="center"/>
 
                 <ImageView
@@ -78,6 +83,8 @@
                     android:layout_height="70dp"
                     android:src="@drawable/rock"
                     android:layout_weight="1"
+                    android:id="@+id/ivPower3"
+
                     android:gravity="center"/>
 
             </LinearLayout>
@@ -97,6 +104,7 @@
                     android:layout_height="70dp"
                     android:layout_weight="1"
                     android:src="@drawable/randanker"
+                    android:id="@+id/ivLevel2"
                     android:gravity="center"/>
 
                 <ImageView
@@ -136,6 +144,7 @@
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_weight="1"
+        android:id="@+id/tvLock2"
         />
 
                 <TextView
@@ -147,7 +156,9 @@
                     android:gravity="center"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:id="@+id/tvLock3"
+                    />
 
                 <TextView
                     android:drawableLeft="@drawable/ic_baseline_lock_24"
@@ -158,7 +169,9 @@
                     android:gravity="center"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:id="@+id/tvLock4"
+                    />
 
     </LinearLayout>
 
@@ -177,7 +190,7 @@
                 <ImageView
                     android:layout_width="0dp"
                     android:layout_height="70dp"
-                    android:src="@drawable/boomerang"
+                    android:src="@drawable/snowflake"
                     android:layout_weight="1"
                     android:gravity="center"/>
 
@@ -205,7 +218,9 @@
                     android:gravity="center"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:id="@+id/tvLock5"
+                    />
 
                 <TextView
                     android:drawableLeft="@drawable/ic_baseline_lock_24"
@@ -216,7 +231,9 @@
                     android:gravity="center"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:id="@+id/tvLock6"
+                    />
 
     </LinearLayout>
 
